// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sql resource definitions can produce sql migration when for a changed schema 1`] = `
"import { a, type AmplifySqlMigration } from "@aws-amplify/data-schema";
export const migration: AmplifySqlMigration = [
    a.sqlMigration.migrationStep({
        name: "create-table-customer",
        up: [
            a.sqlMigration.createTable({
                tableName: "customer",
                primaryKey: ["firstName", "lastName"],
                columns: [{
                        name: "firstName",
                        type: "VARCHAR(255)"
                    }, {
                        name: "lastName",
                        type: "VARCHAR(255)"
                    }, {
                        name: "bio",
                        type: "TEXT",
                        isNullable: false
                    }, {
                        name: "favoriteColors",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }]
            })
        ],
        down: [
            a.sqlMigration.dropTable({
                tableName: "customer"
            })
        ]
    }),
    a.sqlMigration.migrationStep({
        name: "drop-table-user",
        up: [
            a.sqlMigration.dropTable({
                tableName: "user"
            })
        ],
        down: [
            a.sqlMigration.createTable({
                tableName: "user",
                primaryKey: ["fullName"],
                columns: [{
                        name: "fullName",
                        type: "VARCHAR(255)"
                    }, {
                        name: "favoriteColors",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }]
            })
        ]
    }),
    a.sqlMigration.migrationStep({
        name: "drop-table-extraTable",
        up: [
            a.sqlMigration.dropTable({
                tableName: "extraTable"
            })
        ],
        down: [
            a.sqlMigration.createTable({
                tableName: "extraTable",
                primaryKey: ["id"],
                columns: [{
                        name: "fieldName",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }]
            })
        ]
    }),
    a.sqlMigration.migrationStep({
        name: "drop-column-address-country",
        up: [
            a.sqlMigration.dropColumn({
                table: "address",
                column: {
                    name: "country"
                }
            })
        ],
        down: [
            a.sqlMigration.addColumn({
                table: "address",
                column: {
                    name: "country",
                    type: "VARCHAR(255)"
                }
            })
        ]
    })
];"
`;

exports[`sql resource definitions can produce sql migration when no snapshot is provided 1`] = `
"import { a, type AmplifySqlMigration } from "@aws-amplify/data-schema";
export const migration: AmplifySqlMigration = [
    a.sqlMigration.migrationStep({
        name: "create-table-address",
        up: [
            a.sqlMigration.createTable({
                tableName: "address",
                primaryKey: ["id"],
                columns: [{
                        name: "number",
                        type: "INT"
                    }, {
                        name: "street",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }, {
                        name: "city",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }, {
                        name: "state",
                        type: "VARCHAR(50)",
                        isNullable: false
                    }, {
                        name: "zip",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }]
            })
        ],
        down: [
            a.sqlMigration.dropTable({
                tableName: "address"
            })
        ]
    }),
    a.sqlMigration.migrationStep({
        name: "create-table-customer",
        up: [
            a.sqlMigration.createTable({
                tableName: "customer",
                primaryKey: ["firstName", "lastName"],
                columns: [{
                        name: "firstName",
                        type: "VARCHAR(255)"
                    }, {
                        name: "lastName",
                        type: "VARCHAR(255)"
                    }, {
                        name: "bio",
                        type: "TEXT",
                        isNullable: false
                    }, {
                        name: "favoriteColors",
                        type: "VARCHAR(255)",
                        isNullable: false
                    }]
            })
        ],
        down: [
            a.sqlMigration.dropTable({
                tableName: "customer"
            })
        ]
    })
];"
`;
